--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <script src="https://kit.fontawesome.com/6ab0217e5f.js" crossorigin="anonymous"></script>
 </head>
 
+<!-- en el master UNO -->
+<!-- en el master DOS -->
+
 <body class="bodyPadreGridInicio">
     
     <header>
