--- a/pages/productos.html
+++ b/pages/productos.html
@@ -51,14 +51,14 @@
   
            </div>
   
-          <div class="nav-links-Res">
-              <a href="../index.html" target="_blank">Inicio</a>
-              <a href="productos.html" target="_blank">Productos</a>
-              <a href="servicios.html" target="_blank">Servicios</a>
-              <a href="contacto.html" target="_blank">Contacto</a>
-              <a href="trabajos.html" target="_blank">Clientes</a>
-              <a href="quienes-somos.html" target="_blank">Quienes Somos</a>
-          </div>
+           <div class="nav-links-Res">
+            <a href="index.html">Inicio</a>
+            <a href="../pages/productos.html">Productos</a>
+            <a href="../pages/servicios.html">Servicios</a>
+            <a href="../pages/contacto.html">Contacto</a>
+            <a href="../pages/trabajos.html">Clientes</a>
+            <a href="../pages/quienes-somos.html">Quienes Somos</a>
+        </div>
   
       </div>
 
