--- a/pages/trabajos.html
+++ b/pages/trabajos.html
@@ -52,12 +52,12 @@
            </div>
   
           <div class="nav-links-Res">
-              <a href="../index.html" target="_blank">Inicio</a>
-              <a href="productos.html" target="_blank">Productos</a>
-              <a href="servicios.html" target="_blank">Servicios</a>
-              <a href="contacto.html" target="_blank">Contacto</a>
-              <a href="trabajos.html" target="_blank">Clientes</a>
-              <a href="quienes-somos.html" target="_blank">Quienes Somos</a>
+              <a href="../index.html">Inicio</a>
+              <a href="productos.html">Productos</a>
+              <a href="servicios.html">Servicios</a>
+              <a href="contacto.html">Contacto</a>
+              <a href="trabajos.html">Clientes</a>
+              <a href="quienes-somos.html">Quienes Somos</a>
           </div>
   
       </div>
