--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -49,13 +49,13 @@
              </div>
     
              <div class="nav-links-Res">
-                <a href="index.html">Inicio</a>
-                <a href="../pages/productos.html">Productos</a>
-                <a href="../pages/servicios.html">Servicios</a>
-                <a href="../pages/contacto.html">Contacto</a>
-                <a href="../pages/trabajos.html">Clientes</a>
-                <a href="../pages/quienes-somos.html">Quienes Somos</a>
-            </div>
+                <a href="../index.html">Inicio</a>
+                <a href="productos.html">Productos</a>
+                <a href="servicios.html">Servicios</a>
+                <a href="contacto.html">Contacto</a>
+                <a href="trabajos.html">Clientes</a>
+                <a href="quienes-somos.html">Quienes Somos</a>
+              </div>
     
         </div>
 
