corregi urls index.html

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
     
             <div class="nav-links-Res">
                 <a href="index.html">Inicio</a>
-                <a href="../pages/productos.html">Productos</a>
-                <a href="../pages/servicios.html">Servicios</a>
-                <a href="../pages/contacto.html">Contacto</a>
-                <a href="../pages/trabajos.html">Clientes</a>
-                <a href="../pages/quienes-somos.html">Quienes Somos</a>
+                <a href="pages/productos.html">Productos</a>
+                <a href="pages/servicios.html">Servicios</a>
+                <a href="pages/contacto.html">Contacto</a>
+                <a href="pages/trabajos.html">Clientes</a>
+                <a href="pages/quienes-somos.html">Quienes Somos</a>
             </div>
     
         </div>
