--- a/pages/productos.html
+++ b/pages/productos.html
@@ -78,8 +78,8 @@
           <img src="../img/cocina02.JPG" alt="" width="50%" height="50%" />
           <img src="../img/cocina03.JPG" alt="" width="50%" height="50%" />
           <img src="../img/cocina04.JPG" alt="" width="50%" height="50%" />
-          <img src="../img/cocina05.JPG" alt="" width="50%" height="50%" />
-          <img src="../img/cocina06.JPG" alt="" width="50%" height="50%" />
+          <img src="../img/cocina05.jpg" alt="" width="50%" height="50%" />
+          <img src="../img/cocina06.jpg" alt="" width="50%" height="50%" />
         </div>
       </section>
       <section id="idDormitorios">
