primera subida desde bykom

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -117,8 +117,8 @@
 
  
         <section data-aos="fade-down" id="ubicacionContacto">
-            <h2>¿Dónde estamos ubicados?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum debitis dolorem maiores perferendis,
+            <h2>¿Dónde nos encontras?</h2>
+            <p>Hola, nos llamas y listo.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum debitis dolorem maiores perferendis,
                 atque provident et eum est facilis quas accusantium, modi obcaecati libero quisquam voluptate cumque vero at
                 magni, consequatur quo asperiores vitae! Voluptate perferendis, eligendi velit ipsam autem consectetur eius
                 animi sunt doloremque facere nulla laudantium. Facere rem provident delectus exercitationem natus distinctio
