--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     
     <header>
         <!-- subi a GITHUB -->
+        <!-- subi a GITHUB desde Note Toshiba -->
         <div class="nav">
         
             <input type="checkbox" id="nav-check">
